# Web_HW_9

./: authors_data.py  pyproject.toml  quotes_data.py
DB/: authors.json  connect.py  models.py  quotes.json  seed.py
