[tool.poetry]
name = "web-hw-9"
version = "0.1.0"
description = ""
authors = ["YevhenKoss <kossik89@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_9"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
